# PreHypo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  run_all_benchmark_parallel.sh  run_all_indexing_parallel.sh  run_benchmark.sh  run_financebench.sh  run_index.sh  run_multihoprag.sh  run_ocr.sh  run_servers.sh  stop_servers.sh
cli/: benchmark.py  index.py
core/: config.py  neo4j_service.py  schemas.py  vllm_client.py
data/: make_multihoprag_sample.py  multihoprag_sample100_queries.json  multihoprag_sample200_queries.json  multihoprag_smoke_queries.json  prepare_financebench.py  prepare_multihoprag.py
models/hoprag/: hoprag_adapter.py  official_indexer.py
models/ms_graphrag/: ms_adapter.py  official_indexer.py
models/naive/: naive_rag.py
models/prehypo/: graphrag.py  schemas.py  state.py  trace.py
models/prehypo/indexing/: __init__.py  chunking.py  graph_writer.py  hop_edges.py  knowledge_mapping.py  ocr.py
models/prehypo/retrieval/: __init__.py  hybrid.py  quality_gates.py  rerank.py  retrieve.py  rewrite.py  text_utils.py  traversal.py
scripts/: ablation_analysis.py  check_env.py  check_indexes.py  cleanup_old_indexings.py  kfold_analysis.py  lib.sh  mhr_paired_bootstrap.py  mhr_strategy_bars.py  probe_ports.py  reconcile_batch_judge.py  reset_neo4j.py  test_neo4j_conn.py
tests/: test_abstain.py  test_batch_judge.py  test_chunking.py  test_live_integration.py  test_retrieval_constraints.py  test_rolling_summary.py  test_run_workflow.py  test_smoke.py
utils/: abstain.py  batch_judge.py  formatters.py  io.py  metrics.py  ocr_tools.py  parsers.py  reporting.py  tool_definitions.py
utils/prompts/: __init__.py  document.py  evaluation.py  indexing.py  shared.py
