[project]
name = "prehypo"
version = "0.1.0"
description = "Pre-built hypothetical-query graphs for page-grounded financial QA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.15.0",
    "uvicorn",
    "fastapi",
    "sentence-transformers",
    "torch",
    "transformers",
    "accelerate",
    "neo4j",
    "openai",
    "numpy",
    "typing_extensions>=4.13.0",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "python-dotenv",
    "matplotlib",
    "tqdm",
    "requests",
    "pillow",
    "pdf2image",
    # FlashInfer attention backend for vLLM. Without it, vLLM falls back to
    # FLASH_ATTN (works, but FlashInfer enables the faster attn path + autotune
    # on this CUDA 13 / torch cu130 box). Wheels are CUDA-version specific.
    "flashinfer-python",
]

[project.optional-dependencies]
# Test/dev tooling. Install with: VIRTUAL_ENV=.venv uv pip install -e ".[dev]"
dev = [
    "pytest",
]

# The repo is a flat-layout collection of top-level dirs (cli/core/models/
# utils/...) run via `python main.py` from the repo root (main.py does
# sys.path.append), not an importable distribution. Declare no top-level
# modules so setuptools doesn't auto-discover them and abort the editable
# build with "Multiple top-level packages discovered in a flat-layout".
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: main.py needs sys.path.append before local imports
# F403: utils/prompts/__init__.py uses wildcard re-export by design
per-file-ignores = { "main.py" = ["E402"], "utils/prompts/__init__.py" = ["F403"] }
